2009-05-10:
    Fixed problem with icons in the refelctivity plugin (compability issues)
    Made changes in event_handlers to cope with odler version installed
    on my kubuntu machine.
    Fixed bug ID: 2737390, the pars plot now updates when a model is loaded.
    Fixed bug ID: 2748261 in interdiff.py. Should still refactor them but not
    now.
    Fixed bug ID: ID: 2737406. Errorbars are completely removed when a
    new fit is started.
    Added so that diffev works with the standardlibrary package multiprocessing
    as well as the odler processing. Parallel should work out of
    the box for Python > 2.6

2009-03-30:
    Fixed long standing issue with the speed display in when using
    parallel processing.
    Added help on the FOM functions.

2009-03-29:
    Fixed yet another bug in plotpanel relating to the new version of
    matplotlib.
    Fixed a bug in the search replace:
    no scrolling when searching the scriptbug, ID: 2720666
    Fixed bug in the refelctivity plugin:
    Bug in adding a layer with substrate marked, ID: 2633020 
    Fixed bug in the refelctivity plugin:
    ID: 2720662, Plugin does not check if the names are valid
    Fixed bug with no limit on the number of logged fom evaluations
    ID: 2681825, Memory error during fitting
    This was fixed by adding a new class CircBuff in the diffev module.
    It has a maximum length of the buffer before it starts to overwrite
    the oldest value (FIFO). A new parameter in genx.conf "max log elements"
    has been introduced.
    Added the possiblity to change the names of the Layer and stacks in the
    reflectivity plugin.
    ID:2720837, change the Layer/Stack name
    
    
2009-03-10:
    Changed plotpanel. Problems under newer versions of matplotlib

2009-02-12:
    Chaged utils a bit so that it can safely be imported with a *

===============================================================================
2009-01-14: GenX 2b5.1
2008-12-11: